# virtual-helmsman

./: .env.example  .gitignore  API.md  LICENSE  NEXT_STEPS.md  README.md  REVIEW_API.md  TASK.md  config.yaml  n8n_system_prompt.txt  pyproject.toml
.github/workflows/: ci.yml
config.examples/: config.langgraph.yaml  config.parakeet_06b.yaml  config.piper.yaml  config.real_sim.yaml  config.whisper.yaml
docs/: API.md  BROWSER_AUDIO.md  LANGGRAPH_BACKEND.md  LATENCY.md  LOCAL_INGESTION.md  REVIEW_API.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  liveState.svelte.ts
frontend/src/lib/api/: config.ts  control.ts  documents.ts  events.ts  http.ts  index.ts  review.ts  session.ts  webrtc.ts
frontend/src/lib/audio/: browserAudio.ts  webrtcAudio.ts
frontend/src/lib/components/: AddDocumentPanel.svelte  AuditLogPanel.svelte  BrowserAudioPanel.svelte  ChatPanel.svelte  ConversationPanel.svelte  DeleteDocumentPanel.svelte  Header.svelte  MetricsPanel.svelte  PendingReviewPanel.svelte  SchemaField.svelte  ShipStatePanel.svelte  TransparencyModal.svelte  UploadDialog.svelte  conversation.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/audit/: +page.svelte
frontend/src/routes/config/: +page.svelte
frontend/src/routes/documents/: +page.svelte
frontend/src/routes/documents/[batch_id]/: +page.svelte
frontend/src/routes/review/: +page.svelte
frontend/src/routes/review/[batch_id]/: +page.svelte
frontend/static/: audio-capture-worklet.js  audio-playback-worklet.js
frontend/static/documentation/: transparantieverklaring.md
scripts/: bench_stt.py  bench_tts.py  report.py  smoke.py
tests/: test_actions.py  test_api_audio.py  test_api_config.py  test_api_control.py  test_api_documents.py  test_api_events.py  test_api_review.py  test_api_review_local.py  test_api_webrtc.py  test_config.py  test_factories.py  test_ingestion_pure.py  test_ingestion_store.py  test_kb_boundary.py  test_langgraph_llm.py  test_llm_backends.py  test_mock_simulator.py  test_qdrant.py  test_real_simulator.py  test_telemetry.py  test_tools.py
voice_agent/: __init__.py  _cuda.py  config.py  logging_setup.py  main.py  metrics.py  pipeline.py  qdrant.py  telemetry.py  tracing.py
voice_agent/actions/: dispatch.py  processor.py  prompt.py  schema.py
voice_agent/api/: __init__.py  app.py  audio_ws.py  config_router.py  control.py  control_router.py  documents.py  events.py  mic_gate.py  review.py  review_local.py  server.py  webrtc.py
voice_agent/backends/llm/: factory.py  n8n.py  openai_compatible.py
voice_agent/backends/llm/langgraph_helmsman/: __init__.py  graph.py  helpers.py  retrieval.py  service.py  tracing.py
voice_agent/backends/simulator/: base.py  factory.py  mock.py  real.py  wrapper_api.py
voice_agent/backends/stt/: base.py  factory.py  parakeet_nemo.py  parakeet_onnx.py  whisper.py
voice_agent/backends/tts/: base.py  factory.py  kokoro.py  piper.py
voice_agent/backends/turn/: base.py  factory.py  smart_turn_v3.py  vad_only.py
voice_agent/backends/vad/: base.py  factory.py  silero.py
voice_agent/ingestion/: __init__.py  chunking.py  engine.py  metadata.py  pdf.py  qdrant.py  store.py
voice_agent/kb/: __init__.py  review.py
voice_agent/kb/ingestion/: engine.py  metadata.py  store.py
voice_agent/tools/: schemas.py  ship.py
