# Versions pinned as of May 2026. After the first successful install on the
# target CUDA client, lock the full transitive set with `pip freeze` / a
# lockfile for reproducible deploys.
#
# onnxruntime note: the `silero` Pipecat extra pulls CPU `onnxruntime`. This
# project also needs `onnxruntime-gpu` for the Parakeet-ONNX STT CUDA EP.
# Installing both can conflict — on the CUDA client install `onnxruntime-gpu`
# and let it satisfy the runtime. See README "CUDA setup".

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-helmsman"
version = "0.1.0"
description = "Modular local voice agent for a ship simulator (NVIDIA client, remote LLM)"
readme = "README.md"
# Upper bound is real: kokoro-onnx (default TTS) and pythonnet have no
# Python 3.14 wheels as of May 2026. Develop on Python 3.13.
requires-python = ">=3.11,<3.14"

dependencies = [
    # Orchestration + first-party backends (Silero VAD, Kokoro/Piper TTS,
    # Whisper STT, OpenAI-compatible LLM, local smart-turn, local audio).
    "pipecat-ai[silero,kokoro,piper,whisper,openai,local-smart-turn,local]==1.2.1",
    # Config, logging.
    "pydantic==2.11.0",
    "pyyaml==6.0.2",
    "structlog==25.4.0",
    # Parakeet-ONNX STT (default STT backend): in-process ASR via ONNX Runtime.
    "onnx-asr>=0.6.0,<1.0",
    "onnxruntime-gpu==1.26.0",
    "numpy>=2.0,<3.0",
    # In-process control/observability API for the frontend (WebSocket + HTTP).
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.1",
    # Async HTTP client used by /api/documents to forward to n8n and qdrant.
    # python-multipart is required for FastAPI's UploadFile / Form handling.
    "httpx==0.27.2",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
# Real simulator backend: loads the managed .NET DLL via pythonnet. Optional
# because the mock backend is the development default and needs no .NET. Only
# install this when integrating against the real simulator (Windows-only).
# Note: pythonnet 3.0.x supports Python <= 3.13; on Python 3.14 only
# pythonnet 3.1.0rc0+ is available, so this is left unpinned.
real-sim = ['pythonnet>=3.0.5 ; sys_platform == "win32"']
# parakeet_nemo STT backend. Heavy, optional — parakeet_onnx is the default.
nemo = ["nemo-toolkit[asr]>=2.0"]
# CUDA 12.x runtime + cuDNN 9.x for onnxruntime-gpu, as venv-local pip wheels
# (no system-wide CUDA toolkit). Required on the NVIDIA client; the DLLs are
# made discoverable by voice_agent/_cuda.py. nvrtc/nvjitlink arrive as deps.
cuda = [
    'nvidia-cuda-runtime-cu12==12.9.79 ; sys_platform == "win32"',
    'nvidia-cublas-cu12==12.9.2.10 ; sys_platform == "win32"',
    'nvidia-cudnn-cu12==9.22.0.52 ; sys_platform == "win32"',
    'nvidia-cufft-cu12==11.4.1.4 ; sys_platform == "win32"',
    'nvidia-curand-cu12==10.3.10.19 ; sys_platform == "win32"',
]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.9.10",
    "mypy==1.15.0",
    # Used only to build a tiny model for the CUDA-provider check in the README.
    "onnx==1.21.0",
]

[project.scripts]
virtual-helmsman = "voice_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["voice_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
